--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "net.ltgt.apt-eclipse" version "0.21"
     id "com.github.johnrengelman.shadow" version "5.2.0"
     id "application"
+    id 'com.github.sherter.google-java-format' version '0.8'
     id 'com.diffplug.gradle.spotless' version '3.27.2'
 }
 
@@ -18,6 +19,12 @@ repositories {
 configurations {
     // for dependencies that are needed for development only
     developmentOnly 
+}
+
+spotless {
+    java {
+        googleJavaFormat('1.7')
+    }
 }
 
 dependencies {
