--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "application"
     id 'com.github.sherter.google-java-format' version '0.8'
     id 'com.diffplug.gradle.spotless' version '3.27.2'
+    id 'jacoco'
 }
 
 
@@ -70,6 +71,7 @@ mainClassName = "micronaut.sample.Application"
 // use JUnit 5 platform
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
 java {
