--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'com.github.sherter.google-java-format' version '0.8'
     id 'com.diffplug.gradle.spotless' version '3.27.2'
     id 'jacoco'
+    id 'org.seasar.doma.compile' version '1.1.0'
 }
 
 
@@ -58,6 +59,13 @@ dependencies {
 
     implementation "io.micronaut.views:micronaut-views-thymeleaf"
 
+    annotationProcessor "org.seasar.doma:doma-processor:2.37.0"
+    implementation "org.seasar.doma:doma-core:2.37.0"
+    implementation 'io.micronaut.flyway:micronaut-flyway'
+
+    runtimeOnly 'io.micronaut.sql:micronaut-jdbc-hikari'
+    runtimeOnly "com.h2database:h2:1.4.200"
+
     testImplementation "org.mockito:mockito-junit-jupiter:3.3.3"
     testImplementation "org.assertj:assertj-core:3.11.1"
     testImplementation "org.jsoup:jsoup:1.13.1"
@@ -79,14 +87,7 @@ java {
 
 tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
-    options.compilerArgs.addAll([
-            '-parameters',
-            // enables incremental compilation
-            '-Amicronaut.processing.incremental=true',
-            '-Amicronaut.processing.annotations=micronaut.sample.*',
-            "-Amicronaut.processing.group=$project.group",
-            "-Amicronaut.processing.module=$project.name",
-    ])
+    options.compilerArgs.add('-parameters')
 }
 
 shadowJar {
