--- a/src/main/resources/_sample-application-local.yml
+++ b/src/main/resources/_sample-application-local.yml
@@ -3,3 +3,11 @@ system:
     identity: scott
     secret: tiger
     max-task-count: 3
+datasources:
+  default:
+    url: 'jdbc:h2:mem:micronaut-sample;LOCK_TIMEOUT=10000;MODE=PostgreSQL'
+    username: 'sa'
+    password: ''
+    driverClassName: 'org.h2.Driver'
+    schema-generate: CREATE_DROP
+    dialect: H2
