--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,3 +3,15 @@ system:
     identity: scott-test
     secret: tiger-test
     max-task-count: 2
+datasources:
+  default:
+    url: 'jdbc:h2:mem:micronaut-sample;LOCK_TIMEOUT=10000;MODE=PostgreSQL'
+    username: 'sa'
+    password: ''
+    driverClassName: 'org.h2.Driver'
+    schema-generate: CREATE_DROP
+    dialect: H2
+flyway:
+  datasources:
+    default:
+      clean-schema: true
